# real-time-raman-spectral-classifier-with-gui

./: .gitignore  CHANGELOG.md  LICENSE  PROGRESS_TRACKER.md  README.md  RESEARCH_TODO_AND_SCHEDULE.md  SOFTWARE_TRACKER.md  USER_ACTION_GUIDE.md  conda_env.yml  fix_backslash.py  hirsh_datasets.ipynb  idea.md  main.py  prostate_cancer_dataset.ipynb  pyproject.toml  raman_app.spec  raman_app_installer.nsi  raman_app_installer.spec  requirements.txt  result.md  smoothed_raman_df.csv  ssmoothed_raman_df.csv  test.ipynb  test.py  test2.ipynb  test_onnx_model.ipynb  utils.md  utils.py
.AGI-BANKS/: BASE_MEMORY.md  DEVELOPMENT_GUIDELINES.md  DYNAMIC_UI_SIZING.md  FILE_STRUCTURE.md  HISTORY_PROMPT.md  IMPLEMENTATION_PATTERNS.md  MEMORY_UPDATE_SUMMARY.md  PROJECT_OVERVIEW.md  RECENT_CHANGES.md  UI_TITLE_BAR_STANDARD.md
.docs/: COMMIT_MESSAGE.md  IMPLEMENTATION_SUMMARY.md  OCTOBER_8_2025_UI_IMPROVEMENTS.md  README.md  SESSION_COMPLETE_SUMMARY.md  TODOS.md  phase_1_completion_report.md  robust_type_validation_system.md  type_validation_final_summary.md
GUI/: configs.py  main.py
build_scripts/: BUILD_SYSTEM_README.md  build_config_report.json  build_installer.ps1  build_portable.ps1  generate_build_configs.py  raman_app.spec  raman_app_installer.spec  test_build_executable.py
components/: app_tabs.py  matplotlib_widget.py  toast.py
configs/: app_configs.json  configs.py
data/: raman_peaks.json
functions/: ML.py  _utils_.py  configs.py  data_loader.py  noise_func.py  pipeline.py  preprocess.py  utils.py  visualization.py
models/: RF_raman_prostate_model.json  (+6 more)
(+224 files in other folders)
