[project]
name = "raman-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types",
    "anyio",
    "cloudpickle",
    "colorama",
    "contourpy",
    "cvxopt",
    "cycler",
    "fonttools",
    "idna",
    "imageio",
    "importlib-metadata",
    "joblib",
    "kiwisolver",
    "lazy-loader",
    "lime",
    "llvmlite",
    "matplotlib",
    "networkx",
    "numba",
    "numpy",
    "packaging",
    "pandas",
    "pillow",
    "pybaselines",
    "pydantic",
    "pydantic-core",
    "pyparsing",
    "pyside6",
    "pyside6-addons",
    "pyside6-essentials",
    "pysptools",
    "python-dateutil",
    "pytz",
    "ramanspy",
    "renishawwire",
    "scikit-image",
    "scikit-learn",
    "scipy",
    "seaborn",
    "shap",
    "shiboken6",
    "six",
    "skl2onnx>=1.19.1",
    "slicer",
    "sniffio",
    "threadpoolctl",
    "tifffile",
    "tqdm",
    "typing-extensions",
    "typing-inspection",
    "tzdata",
    "wget",
    "zipp",
]
